[package]
name = "battlesearch"
version = "0.1.0"
authors = ["Annika L. <annika0uwu@gmail.com>"]
edition = "2018"
description = "Searches Pokémon Showdown battle logs"
license = "MIT"
homepage = "https://github.com/AnnikaCodes/battlesearch"
repository = "https://github.com/AnnikaCodes/battlesearch.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
pikkr-annika = "0.16.1"
regex = "1.4.5"
structopt = "0.3.21"
